# nrf-lora

./: Cargo.toml  build.rs  memory.x  program_softdevice.sh  rust-toolchain.toml
.cargo/: config.toml
src/: bluetooth.rs  commands.rs  constants.rs  crypto.rs  error.rs  main.rs  packet.rs  radio.rs
src/meshcore/: crypto.rs  lora.rs  mod.rs  packet.rs
src/meshcore/packet/: advert.rs  direct_packets.rs  group_packets.rs  grp_txt.rs  plain_message.rs  txt_msg.rs
src/meshtastic/: lora.rs  mod.rs  packet.rs
