[package]
name = "nrf-lora"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nrf-lora"
test = false
doctest = false
bench = false

[dependencies]
defmt = "0.3.0"
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "nightly",
] }
embassy-nrf = { version = "0.3.1", features = [
    "defmt",
    "gpiote",
    "nfc-pins-as-gpio",
    "nrf52840",
    "time-driver-rtc1",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt-rtt = "1.0.0"
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
lora-phy = { git = "https://github.com/lora-rs/lora-rs", version = "3.0.2-alpha", features = [
    "defmt-03",
] }
zerocopy = { version = "0.8.24", features = ["derive"] }
ctr = "0.9.2"
aes = "0.8.4"
femtopb = { version = "0.8.0", features = ["defmt"] }
embedded-alloc = "0.6.0"
thiserror = { version = "2.0.12", default-features = false }
rand_core = "0.6.4"
embassy-sync = { version = "0.6.2", features = ["defmt"] }

[build-dependencies]
femtopb-build = "0.8.0"

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "unwind"
rpath = false
strip = true

[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
