[package]
name = "nrf-lora"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nrf-lora"
test = false
doctest = false
bench = false

[dependencies]
defmt = "1.0"
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "nightly",
] }
embassy-nrf = { version = "0.7", features = [
    "defmt",
    "gpiote",
    "time",
    "nfc-pins-as-gpio",
    "nrf52840",
    "time-driver-rtc1",
] }
embassy-time = "0.5.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
defmt-rtt = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
lora-phy = { git = "https://github.com/lora-rs/lora-rs", version = "3.0.2-alpha", features = [
    "defmt-03",
] }
zerocopy = { version = "0.8", features = ["derive"] }
aes = "0.8"
ctr = "0.9"
femtopb = { version = "0.8", features = ["defmt"] }
thiserror = { version = "2.0", default-features = false }
rand_core = "0.9"
rand = { version = "0.9", default-features = false, features = [
    "nightly",
    "std_rng",
] }
embassy-sync = { version = "0.7", features = ["defmt"] }
static_cell = { version = "2.1", features = ["nightly"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
ed25519-dalek = { version = "2.2", default-features = false, features = [
    "fast",
    "zeroize",
] }
x25519-dalek = { version = "2.0", default-features = false, features = [
    "precomputed-tables",
    "static_secrets",
    "zeroize",
] }
hmac = { version = "0.12", features = ["reset"] }
sha2 = { version = "0.10", default-features = false }
generic-array = "1.2.0"
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", version = "0.1.0", features = [
    "ble-peripheral",
    "nrf52840",
    "s113",
    "defmt",
    "ble-gatt-server",
] }


[build-dependencies]
femtopb-build = "0.8"

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "unwind"
rpath = false
# strip = true

[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
